# blockvisor

./: .e2eignore  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  archive_blockchain_guide.md  build.rs  clear.sh  docker-compose.yml  docker-compose.yml.template  envoy.yaml  flake.nix  git-conventional-commits.yaml  host_setup_guide.md  node_image_builder_guide.md  release.toml  run-host.sh  run-node.sh  run.sh  run_bv_local.md  rust-toolchain.toml
api/: .dockerignore  Cargo.toml  Dockerfile  README.md
api/config/: default.toml  development.toml
api/migrations/: 20220414182329_users.down.sql  20220414182329_users.up.sql
api/src/: auth.rs  config.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  result.rs  server.rs  test_helpers.rs
babel/: Cargo.toml  build.rs
babel/data/: babel.service  babelsup.service
babel/examples/: avax.toml  band.toml  casper.toml  edgeware.toml  eth.toml  helium.toml  iris.toml  juno.toml  moonbeam.toml  near.toml  olabs.toml  osmosis.toml  pedge.toml  polkadot.toml  solana.toml
babel/protocols/algorand/: algo.toml  algorand.toml
babel/protocols/aptos/: aptos.toml
babel/protocols/arbitrum/: arbitrum.toml
babel/protocols/aurora/: aurora.toml
babel/protocols/avalanche/: avax.toml
babel/protocols/band/: band.toml
babel/protocols/bnb/: beacon.toml  bsc.toml
babel/protocols/boba/: boba.toml
babel/protocols/cardano/: cardano.toml
babel/protocols/casper_labs/: casper.toml
babel/protocols/centrifuge/: centrifuge.toml
babel/protocols/chainlink/: chainlink.toml
babel/protocols/cosmos/: cosmos.toml
babel/protocols/cronos/: cronos.toml
babel/protocols/edgeware/: edgeware.toml
babel/protocols/elrond/: elrond.toml
babel/protocols/eos/: eos.toml
babel/protocols/ethereum/: eth.toml
babel/protocols/evmos/: evmos.toml
babel/protocols/fantom/: fantom.toml
babel/protocols/flow/: flow.toml
babel/protocols/fuse/: fuse.toml
babel/protocols/fusion/: fusion.toml
babel/protocols/gnosis/: gnosis.toml
babel/protocols/harmony/: harmony.toml
babel/protocols/hedera/: hedera.toml
babel/protocols/helium/: helium-validator.toml  helium.toml
babel/protocols/iris/: iris.toml
babel/protocols/juno/: juno.toml
babel/protocols/kava/: kava.toml
babel/protocols/klaytn/: klaytn.toml
babel/protocols/kusama/: kusama.toml
babel/protocols/meter/: meter.toml
babel/protocols/metis/: metis.toml
babel/protocols/mina/: mina.toml
babel/protocols/moonbeam/: moonbeam.toml
babel/protocols/moonriver/: moonriver.toml
babel/protocols/nahmii/: nahmii.toml
babel/protocols/near/: near.toml
babel/protocols/oasis_labs/: olabs.toml
babel/protocols/osmosis/: osmosis.toml
babel/protocols/pocket/: pokt.toml
babel/protocols/polkadot/: polkadot.toml
babel/protocols/polygon/: pedge.toml  polygon.toml
babel/protocols/sentinel/: sentinel.toml
babel/protocols/solana/: solana.toml
babel/protocols/testing/: babel.toml
babel/protocols/tezos/: tezos.toml
babel/protocols/tron/: tron.toml
babel/protocols/waves/: waves.toml
babel/src/: api.rs  async_pid_watch.rs  babel.rs  babel_binary.rs  babel_service.rs  babelsup_service.rs  checksum.rs  chroot_platform.rs  client.rs  compression.rs  config.rs  download_job.rs  env.rs  error.rs  fc_platform.rs  job_data.rs  job_runner.rs  jobs.rs  jobs_manager.rs  lib.rs  log_buffer.rs  logging.rs  logs_service.rs  main.rs  msg_handler.rs  multi_client_integration.rs  pal.rs  pal_config.rs  run_flag.rs  run_sh_job.rs  sup_handler.rs  supervisor.rs  ufw_wrapper.rs  upload_job.rs  utils.rs  vsock.rs
babel/tests/: supervisor.rs  test_protocols.rs
babel_api/: Cargo.toml  rhai_plugin_guide.md
babel_api/examples/: base.rhai  custom_download_upload.rhai  init_minimal.rhai  jobs.rhai  metadata.rhai  plugin_config.rhai  polygon_functions.rhai  services.rhai
babel_api/netdata/: stream.conf
babel_api/proto/: babelsup.proto
babel_api/protocols/aleo/: node.toml
babel_api/protocols/algorand/: algorand.toml  node.rhai
babel_api/protocols/aptos/: node.toml
babel_api/protocols/arbitrum/: arbitrum.toml
babel_api/protocols/band/: band.toml
babel_api/src/: api.rs  babel.rs  babelsup.rs  config.rs  engine.rs  lib.rs  metadata.rs  plugin.rs  plugin_config.rs  rhai_plugin.rs  rhai_plugin_linter.rs  utils.rs
babel_api/tests/: test_examples.rs  test_protocols.rs  test_smoke_all.rs  test_testing.rs  utils.rs
blockvisord/: Cargo.toml  readme.md
blockvisord/src/: cli.rs  client.rs  config.rs  containers.rs  dbus.rs  hosts.rs  lib.rs  logging.rs  main.rs  network_interface.rs  node.rs  node_data.rs  nodes.rs  pretty_table.rs  systemd.rs  utils.rs
blockvisord/tests/: test_bv_cmd.rs
bv/: Cargo.toml  build.rs  image.yaml  protocols.yaml
bv/data/: .code-workspace  00_bridge.conflist.template  Dockerfile.template  babel-bus.conf  babel-bus.service  babel-bus.socket  babel.rhai.template  babel.yaml.template  base.rhai.template  blockvisor.service  main.rhai.template  services.rhai.template  tmux.service
bv/src/: api_config.rs  apptainer_machine.rs  apptainer_platform.rs  babel_binary.rs  babel_connection.rs  babel_engine.rs  babel_engine_service.rs  bare_machine.rs  bib.rs  bib_cli.rs  bib_config.rs  blockvisord.rs  bv.rs  bv_cli.rs  bv_config.rs  bv_context.rs  cli.rs  cluster.rs  commands.rs  config.rs  cookbook_service.rs  cpu_registry.rs  env.rs  firecracker_machine.rs  firewall.rs  grpc.rs  hosts.rs  installer.rs  internal_server.rs  key_service.rs  lib.rs  linux_apptainer_platform.rs  linux_bare_platform.rs  linux_fc_platform.rs  linux_platform.rs  network_interface.rs  new_babel_engine.rs  nib.rs  nib_cli.rs  nib_config.rs  (+22 more)
bv/tests/: README.md  babel.rhai  itests.rs  protocols.yaml  stub_server.rs  test_bv_cli_offline.rs  test_bv_cmd.rs  token.rs
bv_tests_utils/: Cargo.toml
bv_tests_utils/src/: babel_engine_mock.rs  lib.rs  rpc.rs
bv_utils/: Cargo.toml
bv_utils/src/: cmd.rs  grpc.rs  lib.rs  lock_file.rs  logging.rs  rpc.rs  run_flag.rs  system.rs  timer.rs
upload_manifest_generator/: Cargo.toml
upload_manifest_generator/src/: main.rs
(+703 files in other folders)
