[package]
edition = "2021"
name = "blockvisord"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blockvisord"
path = "src/lib.rs"

[[bin]]
name = "bv"
path = "src/bin/bv.rs"

[[bin]]
name = "blockvisord"
path = "src/bin/blockvisord.rs"

[dependencies]
anyhow = "1.0.56"
base64 = "0.13.0"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "3.1.15", features = ["derive"]}
cli-table = "0.4"
futures-util = "0.3"
home = "0.5.3"
lazy_static = "1.4.0"
local-ip-address = "0.4.4"
petname = {version = "1.1.2", features = ["default_dictionary", "std_rng"], default-features = false}
prost = "0.10"
prost-types = "0.10"
reqwest = {version = "0.11.10", features = ["json"]}
serde = {version = "1.0.136", features = ["rc"]}
serde_json = "1.0.79"
sysinfo = "0.23.12"
tokio = {version = "1.17.0", features = ["full"]}
tokio-stream = {version = "0.1.9", features = ["sync"]}
toml = "0.5.8"
tonic = {version = "0.7", features = ["tls-roots"]}
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.11", features = ["env-filter", "fmt", "std"], default-features = false}
uuid = {version = "1.0.0", features = ["serde", "v4"]}
zbus = {version = "3.0.0", features = ["tokio", "uuid"], default-features = false}

firec = {git = "https://github.com/blockjoy/firec.git", rev = "758e4b64"}

[build-dependencies]
tonic-build = {version = "0.7", features = ["prost"]}

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.1"
serial_test = "0.7.0"
