[package]
edition = "2021"
name = "api"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
axum = "0.5.0"
chrono = {version = "0.4.19", features = ["serde"]}
config = "0.13.0"
dotenv = "0.15.0"
hyper = {version = "0.14.18", features = []}
opentelemetry = {version = "0.17.0", optional = true, features = ["rt-tokio", "metrics", "trace"]}
opentelemetry-otlp = {version = "0.10.0", optional = true, features = ["metrics", "tls", "trace"], default-features = false}
secrecy = {version = "0.8.0", features = ["serde"]}
serde = "1.0.136"
serde_json = "1.0.79"
sqlx = {version = "0.5.11", features = ["chrono", "migrate", "offline", "postgres", "runtime-tokio-rustls", "uuid"]}
thiserror = "1.0.30"
tokio = {version = "1.17.0", features = ["full"]}
tower = {version = "0.4.12", features = []}
tower-http = {version = "0.2.5", features = ["trace"]}
tracing = "0.1.32"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = {version = "0.3.10", features = ["env-filter", "json"]}
uuid = {version = "0.8.2", features = ["v4", "serde"]}

[features]
default = ["tracing/release_max_level_debug"]
otel = ["opentelemetry", "opentelemetry-otlp", "opentelemetry-otlp/tonic"]
