[package]
name = "babel"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "babel"
path = "src/lib.rs"

[[bin]]
name = "babel"
path = "src/bin/babel.rs"

[[bin]]
name = "babelsup"
path = "src/bin/babelsup.rs"

[[bin]]
name = "babel_job_runner"
path = "src/bin/job_runner.rs"

[dependencies]
async-trait = "0.1.61"
babel_api = {version = "*", path = "../babel_api"}
blake3 = "1.4.0"
bv_utils = {version = "*", path = "../bv_utils"}
chrono = "0.4.24"
crc = "3.0.0"
eyre = "0.6.8"
futures = "0.3.25"
futures-util = "0.3.28"
gjson = "0.8"
lazy_static = "1.4.0"
reqwest = {version = "0.11.18", features = ["json", "rustls-tls", "stream"], default-features = false}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
serde_variant = "0.1.2"
sysinfo = "0.29.2"
tera = {version = "1.18.1", default-features = false}
thiserror = "1.0.40"
tokio = {version = "1.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread"]}
tokio-stream = "0.1.11"
tonic = "0.8.3"
tower = "0.4.13"
tracing = "0.1.37"
sha1_smol = "1.0.0"
sha2 = "0.10.7"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = {version = "0.4.0", features = ["tonic-conn"]}
libc = "0.2.78"
nix = "0.26.2"
rlimit = "0.9.1"

[dev-dependencies]
assert_fs = "1"
httpmock = "0.6.7"
mockall = "0.11.3"
tokio-stream = {version = "0.1.11", features = ["net"]}
tokio-util = {version = "0.7.4", features = ["io"]}
