[package]
name = "babel"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "babel"
path = "src/lib.rs"

[[bin]]
name = "babel"
path = "src/bin/babel.rs"

[[bin]]
name = "babel_job_runner"
path = "src/bin/job_runner.rs"

[dependencies]
async-trait = "0.1.87"
babel_api = { path = "../babel_api" }
blake3 = "1.6.1"
bv_utils = { path = "../bv_utils" }
chrono = "0.4.40"
crc = "3.2.1"
eyre = "0.6.12"
file-rotate = "0.8.0"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"
nu-glob = "0.102.0"
pathdiff = "0.2.3"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.29.11"
tera = { version = "1.20.0", default-features = false }
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = "0.8.3"
tracing = "0.1.41"
walkdir = "2.5.0"
sha1_smol = "1.0.1"
sha2 = "0.10.8"
zstd = "0.13.2"
url = "2.5.4"
users = "0.11.0"
ctrlc = "3.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.170"
nix = "0.29.0"
rlimit = "0.10.2"

[dev-dependencies]
assert_fs = "1.1.2"
bv_tests_utils = { path = "../bv_tests_utils" }
mockito = "1.7.0"
mockall = "0.13.1"
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-util = { version = "0.7.13", features = ["io"] }
