[package]
name = "babel_api"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
cidr-utils = "0.5.10"
eyre = "0.6.8"
futures-core = "0.3.29"
rhai = {version = "1.12.0", features = ["serde", "sync"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_bytes = "0.11.8"
serde_json = "1.0.91"
tonic = "0.8.3"
tonic-rpc = { version = "0.2.1", features = ["bincode"] }
tracing = "0.1.37"
url = {version = "2.5.0", features = ["serde"]}

[dev-dependencies]
mockall = "0.11.3"
walkdir = "2"
tracing = "0.1.37"
