[package]
name = "babel_api"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
chrono = "0.4.38"
eyre = "0.6.8"
rhai = { version = "1.17.1", features = ["serde", "sync"] }
semver = "1.0.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tonic = "0.8.3"
tonic-rpc = { version = "0.2.1", features = ["bincode"] }
tracing = "0.1.37"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
bv_tests_utils = { version = "*", path = "../bv_tests_utils" }
mockall = "0.11.3"
walkdir = "2"
tracing = "0.1.37"
