[package]
name = "babel_api"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
chrono = "0.4.40"
eyre = "0.6.12"
rhai = { version = "1.20.1", features = ["serde", "sync", "internals"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tonic = "0.8.3"
tonic-rpc = { version = "0.2.1", features = ["bincode"] }
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"

[dev-dependencies]
bv_tests_utils = { path = "../bv_tests_utils" }
mockall = "0.13.1"
tracing = "0.1.41"
