[package]
edition = "2021"
name = "blockvisord"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blockvisord"
path = "src/lib.rs"

[[bin]]
name = "bvs"
path = "src/bin/bvs.rs"

[[bin]]
name = "blockvisord"
path = "src/bin/blockvisord.rs"

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "3.1.15", features = ["derive"]}
daemonize = "0.4.1"
local-ip-address = "0.4.4"
reqwest = {version = "0.11.10", features = ["json"]}
serde = "1.0.136"
serde_json = "1.0.79"
sysinfo = "0.23.12"
tokio = {version = "1.17.0", features = ["full"]}
toml = "0.5.8"
uuid = {version = "1.0.0", features = ["serde", "v4"]}

firec = { git = "https://github.com/blockjoy/firec.git" }

[dev-dependencies]
httpmock = "0.6"
