[package]
edition = "2021"
name = "blockvisord"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blockvisord"
path = "src/lib.rs"

[[bin]]
name = "bv"
path = "src/bin/bv.rs"

[[bin]]
name = "blockvisord"
path = "src/bin/blockvisord.rs"

[dependencies]
anyhow = "1.0.56"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "3.1.15", features = ["derive"]}
home = "0.5.3"
lazy_static = "1.4.0"
local-ip-address = "0.4.4"
reqwest = {version = "0.11.10", features = ["json"]}
serde = {version = "1.0.136", features = ["rc"]}
serde_json = "1.0.79"
sysinfo = "0.23.12"
tokio = {version = "1.17.0", features = ["full"]}
toml = "0.5.8"
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.11", features = ["env-filter", "fmt", "std"], default-features = false}
uuid = {version = "1.0.0", features = ["serde", "v4"]}
zbus = {version = "2.3.0", features = ["tokio", "uuid"], default-features = false}

firec = {git = "https://github.com/blockjoy/firec.git"}

[dev-dependencies]
httpmock = "0.6"
