[package]
name = "blockvisord"
publish = false
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blockvisord"
path = "src/lib.rs"

[[bin]]
name = "bv"
path = "src/bin/bv.rs"

[[bin]]
name = "blockvisord"
path = "src/bin/blockvisord.rs"

[[bin]]
name = "installer"
path = "src/bin/installer.rs"

[[bin]]
name = "bvup"
path = "src/bin/bvup.rs"

[[bin]]
name = "blockvisord-dev"
path = "src/bin/blockvisord-dev.rs"

[[bin]]
name = "nib"
path = "src/bin/nib.rs"

[dependencies]
bv_utils = { version = "*", path = "../bv_utils" }
async-trait = "0.1.60"
babel_api = { version = "*", path = "../babel_api" }
base64 = "0.21.0"
cidr-utils = "0.5.10"
chitchat = { git = "https://github.com/quickwit-oss/chitchat.git", rev = "c939d19" }
clap = { version = "4.4.10", features = ["derive", "cargo"] }
cli-table = "0.4"
chrono = { version = "0.4.24", features = ["serde"] }
cron = "0.12.1"
eyre = "0.6.8"
fs_extra = "1.2.0"
futures-util = "0.3"
homedir = "0.3.4"
ipnet = "2.8.0"
lazy_static = "1.4.0"
metrics = "0.21.1"
petname = { version = "1.1.3", features = ["default_dictionary", "std_rng"], default-features = false }
prost = "0.11.6"
prost-types = "0.11.6"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["rustls-tls"], default-features = false }
rpassword = "7.3.1"
rumqttc = "0.24.0"
rustls = "0.22.4"
rustls-native-certs = "0.7.0"
semver = "1.0.16"
serde = "1.0.152"
serde_json = "1.0.91"
serde_variant = "0.1.2"
serde_yaml_ng = "0.10.0"
sysinfo = "0.29.2"
systemstat = "0.2.2"
tempdir = "0.3.7"
tera = { version = "1.18.1", default-features = false }
thiserror = "1.0.31"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["net", "sync"] }
tonic = { version = "0.8.3", features = ["tls-roots", "gzip"] }
tonic-rpc = { version = "0.2.1", features = ["bincode"] }
tracing = "0.1.37"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
url = "2.5.0"
walkdir = "2.4.0"

[build-dependencies]
clap = { version = "4.4.10", features = ["derive", "cargo"] }
clap_complete = "4.5.2"
eyre = "0.6.8"
tonic-build = { version = "0.8.4", features = ["prost"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
bv_tests_utils = { version = "*", path = "../bv_tests_utils" }
mockito = "1.2.0"
jsonwebtoken = "9.1.0"
local-ip-address = "0.5.1"
mockall = "0.11.3"
predicates = "3.0.4"
serial_test = "3.2.0"
tokio-stream = { version = "0.1.14", features = ["net"] }
http = "1.0.0"
