[package]
name = "blockvisord"
publish = false
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blockvisord"
path = "src/lib.rs"

[[bin]]
name = "bv"
path = "src/bin/bv.rs"

[[bin]]
name = "blockvisord"
path = "src/bin/blockvisord.rs"

[[bin]]
name = "installer"
path = "src/bin/installer.rs"

[[bin]]
name = "bvup"
path = "src/bin/bvup.rs"

[[bin]]
name = "blockvisord-dev"
path = "src/bin/blockvisord-dev.rs"

[[bin]]
name = "nib"
path = "src/bin/nib.rs"

[dependencies]
bv_utils = { version = "*", path = "../bv_utils" }
async-trait = "0.1.87"
babel_api = { version = "*", path = "../babel_api" }
base64 = "0.22.1"
cidr-utils = "0.5.11"
chitchat = { git = "https://github.com/quickwit-oss/chitchat.git", rev = "c939d19" }
clap = { version = "4.5.31", features = ["derive", "cargo"] }
cli-table = "0.4.9"
chrono = { version = "0.4.40", features = ["serde"] }
cron = "0.15.0"
eyre = "0.6.12"
fs_extra = "1.3.0"
futures-util = "0.3.31"
homedir = "0.3.4"
ipnet = "2.11.0"
lazy_static = "1.5.0"
metrics = "0.24.1"
petname = { version = "2.0.2", features = ["default-words", "default-rng"], default-features = false }
prost = "0.11.9"
prost-types = "0.11.9"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["rustls-tls"], default-features = false }
rpassword = "7.3.1"
rumqttc = { version = "0.24.0", features = ["use-rustls"], default-features = false }
rustls-native-certs = "0.8.1"
semver = "1.0.26"
serde = "1.0.218"
serde_json = "1.0.140"
serde_variant = "0.1.3"
serde_yaml_ng = "0.10.0"
sysinfo = "0.29.11"
systemstat = "0.2.4"
tempdir = "0.3.7"
tera = { version = "1.20.0", default-features = false }
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net", "sync"] }
tonic = { version = "0.8.3", features = ["tls-roots", "gzip"] }
tonic-rpc = { version = "0.2.1", features = ["bincode"] }
tracing = "0.1.41"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
url = "2.5.4"
walkdir = "2.5.0"

[build-dependencies]
clap = { version = "4.5.31", features = ["derive", "cargo"] }
clap_complete = "4.5.46"
eyre = "0.6.12"
tonic-build = { version = "0.8.4", features = ["prost"] }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
bv_tests_utils = { version = "*", path = "../bv_tests_utils" }
mockito = "1.7.0"
jsonwebtoken = "9.3.1"
local-ip-address = "0.6.3"
mockall = "0.13.1"
predicates = "3.1.3"
serial_test = "3.2.0"
tokio-stream = { version = "0.1.17", features = ["net"] }
