[package]
name = "bv_tests_utils"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
babel_api = { version = "*", path = "../babel_api" }
bv_utils = { version = "*", path = "../bv_utils" }
eyre = "0.6.8"
mockall = "0.11.3"
tonic = "0.8.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.37"
