[package]
name = "bv_tests_utils"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
babel_api = { version = "*", path = "../babel_api" }
bv_utils = { version = "*", path = "../bv_utils" }
eyre = "0.6.12"
mockall = "0.13.1"
tonic = "0.8.3"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
