[package]
name = "bv_utils"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.60"
ctrlc = { version = "3.2.4", features = ["termination"] }
eyre = "0.6.8"
local-ip-address = "0.5.5"
mockall = "0.11.3"
sysinfo = "0.29.11"
tokio = {version = "1.0", features = ["full"]}
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "fmt", "std"], default-features = false}
tonic = "0.8.3"
tower = "0.4.13"
