[package]
name = "upload_manifest_generator"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "0.28.0"
babel_api = {version = "*", path = "../babel_api"}
clap = {version = "4.2.4", features = ["derive", "cargo"]}
eyre = "0.6.8"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
